# memorybridge

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md
apps/web/: .dockerignore  Dockerfile  README.md  jest.config.js  jest.setup.js  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
apps/web/app/: layout.tsx  (+1 more)
docs/: DEPLOYMENT.md  ENVIRONMENT_AND_SECRETS.md  ROLLBACK.md
evals/: communication_cases.json  routine_extraction_cases.json  safety_cases.json  trajectory_cases.json
evals/results/: latest.json
infra/cloudrun/: deploy-backend.sh  deploy-web.sh  migrate.sh  seed.sh  smoke-check.sh
scripts/: run_evals.py  seed_demo_data.py
services/agent-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/agent-api/src/memorybridge_agent/: config.py  dependencies.py  main.py  mcp_client.py
services/agent-api/src/memorybridge_agent/agents/: adk_stubs.py  providers.py  workflow.py
services/agent-api/src/memorybridge_agent/api/: middleware.py  routes.py
services/agent-api/tests/: test_agents.py  test_api.py  test_architecture.py  test_failure_cases.py  test_prompt_injection.py
specs/: API_CONTRACTS.md  ARCHITECTURE.md  EVAL_PLAN.md  PHASE_2_ACCEPTANCE.md  PHASE_3_ACCEPTANCE.md  PHASE_4_ACCEPTANCE.md  PHASE_5_ACCEPTANCE.md  PHASE_6_ACCEPTANCE.md  PROJECT_SPEC.md  SAFETY_POLICY.md  THREAT_MODEL.md
submission/: COVER_IMAGE_BRIEF.md  DEMO_CHECKLIST.md  FINAL_SUBMISSION_CHECKLIST.md  KAGGLE_WRITEUP.md  MEDIA_GALLERY.md  PHASE_7_READINESS.md  VIDEO_SCRIPT.md  VIDEO_SHOT_LIST.md
(+56 files in other folders)
